--- a/__lecture/lecture-1-js-callbacks.mdx
+++ b/__lecture/lecture-1-js-callbacks.mdx
@@ -63,6 +63,9 @@ console.log('do third thing');
 
 // expected output
 
+first
+second
+third
 ```
 
 _What is expected here?_
@@ -80,7 +83,9 @@ setTimeout(function() {
 }, 2000);
 console.log('do third thing');
 ```
-
+first
+third
+second
 ---
 
 ### Important
